# cs456

a1/: README  ccs.rs  count.py  countbyte.py  hidden.txt  hints.txt  key.txt  parallel_bruteforce.rs  plaintext.txt  writeup.md
a2/: Cargo.toml  README.md  a2.e  a2.n
a2/src/: main.rs
a3/: Cargo.toml  README.md  a3.cipher  params  run.sh
a3/src/: de-eg.rs  lib.rs  main.rs
a4/: Cargo.toml  params  run.sh
a4/src/: main.rs
chat/: Cargo.toml  README.md
chat/src/: chat.rs  client.rs  daemon.rs  lib.rs
